tests/syntax/good/expr_array0.c

void f(){

x[10];
}

