tests/syntax/bad/expr_array_fail1.c

void f(){

x[12);
}

